--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="index.html" id="home-btn"></a>
       <button id="about-btn">About This Website</button>
       <button id="gallery-btn">Gallery</button>
+      <button id="ahmet-btn">Ahmet Museum</button>
     </div>
 
     <section id="about" class="tab-content">
@@ -26,6 +27,11 @@
       <div class="gallery-grid">
       </div>
       <div id="gallery-container" class="gallery-grid"></div>
+    </section>
+
+    <section id="ahmet" class="tab-content">
+      <div id="ahmet-container" class="gallery-grid">
+        </div>
     </section>
 
     <script src="js/gallery.js" defer></script>
