--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="style/gallery.css">
+    <link rel="stylesheet" href="style/ahmet.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Esef</title>
   </head>
@@ -30,7 +31,7 @@
     </section>
 
     <section id="ahmet" class="tab-content">
-      <div id="ahmet-container" class="gallery-grid">
+      <div id="ahmet-container">
         </div>
     </section>
 
